fixed watchlists on mobile

--- a/Home/Details/details.css
+++ b/Home/Details/details.css
@@ -198,7 +198,7 @@ Mobile CSS
     #movie-desc{
         position:absolute;
         left: 225px;
-        top: 70px;
+        top: 76px;
         width: 45vw;
     }
     #movie-rating-label{
